fix payment schedule including a due date beyond the selected cut off

--- a/UI/src/Styles/Components/screen-overlay.sass
+++ b/UI/src/Styles/Components/screen-overlay.sass
@@ -20,7 +20,7 @@
     border-left: solid 1px var(--primary)
     display: flex
     height: 100%
-    overflow: scroll
+    overflow-y: scroll
     align-items: start
     justify-content: center
     > *
